# unsw-scp

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  renovate.json
certman/: .gitignore  Cargo.toml
certman/src/: lib.rs
cgi-service/certissuer-cgi/: Cargo.toml
cgi-service/certissuer-cgi/src/: errors.rs  handlers.rs  main.rs
cgi-service/certissuer-cgi/src/tokens/: mod.rs
cgi-service/cgi-frontend/: package.json  pnpm-lock.yaml
dashboard/: .eslintrc.js  .prettierrc  Dockerfile  README.md  next.config.js  package.json  pnpm-lock.yaml
dashboard/pages/: index.tsx
dashboard/src/components/: theme.tsx
dashboard/src/components/challenges/: FlagCard.tsx
dashboard/src/components/chrome/: index.tsx  theme_switcher.tsx
dashboard/src/components/next_eui/: button.tsx
dashboard/src/components/starter/: gradient_bg.styles.ts  gradient_bg.tsx  header.styles.ts  header.tsx  theme_switcher.styles.ts  theme_switcher.tsx  wrapper.styles.ts  wrapper.tsx
dashboard/src/custom_typings/: index.d.ts
dashboard/src/lib/: loader.ts  theme.ts
dashboard/src/pages/: 404.tsx  _app.tsx  _document.tsx  _error.tsx  index.tsx
dashboard/src/styles/: global.styles.ts
env_utils/: Cargo.toml
env_utils/src/: lib.rs
gaia/gaia-backend/: .gitignore  Cargo.toml  Dockerfile  README.md
gaia/gaia-backend/entity/: Cargo.toml
gaia/gaia-backend/entity/src/entities/: role.rs  user.rs
gaia/gaia-backend/migration/: Cargo.toml
gaia/gaia-backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_create_table.rs  m20220101_000003_create_index.rs  m20220101_000004_create_index.rs
gaia/gaia-backend/src/: env_util.rs  main.rs
gaia/gaia-backend/src/routes/: certificates.rs  mod.rs  self_service.rs
gaia/gaia-backend/src/utils/: mod.rs  tokens.rs
gaia/gaia-frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
gaia/gaia-frontend/components/: EnrolmentForm.tsx
gaia/gaia-frontend/pages/: _app.tsx  _document.tsx  enrol.tsx  index.tsx
intra-jwt/: .rustfmt.toml  Cargo.toml
intra-jwt/src/: lib.rs
proxy/: .gitignore  Cargo.toml  Dockerfile  README.md  cert.pem
proxy/src/: env_util.rs  main.rs
proxy/src/middleware/: mod.rs  redirect.rs
proxy/src/router_utils/: mod.rs
proxy/src/routes/: mod.rs
proxy/src/tls/: mod.rs  tests.rs
router/: .gitignore  Cargo.toml  Dockerfile  README.md
router/entity/: Cargo.toml
router/entity/src/entities/: category.rs  challenge.rs  flag.rs  mod.rs  service.rs  submission.rs  user.rs
router/migration/: Cargo.toml
router/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_create_table.rs  m20220101_000003_create_table.rs  m20220101_000004_create_table.rs  m20220101_000005_create_table.rs  m20220101_000006_create_table.rs  m20220101_000007_create_index.rs  m20220101_000008_create_index.rs  m20220101_000009_create_index.rs
router/src/: main.rs
router/src/gaia_utils/: mod.rs
router/src/handler_utils/: mod.rs
router/src/registry/: mod.rs  services.rs
router/src/routes/: challenges.rs  create_service.rs  evaluation.rs  flags.rs  mod.rs
router/src/routes/challenges/: all_challenges.rs  mod.rs
router/src/routes/flags/: generate.rs  mod.rs  submit.rs
