[package]
name = "certman"
version = "0.1.0"
edition = "2021"

[lib]
name = "cert_utils"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
rcgen = { version = "0.9.2", features = ["x509-parser"] }
