[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
actix-tls = { version = "3.0.3", features = ["rustls"] }
actix-web = { version = "4.0.1", features = ["rustls", "secure-cookies"] }
futures-util = "0.3.21"
intra-jwt = { path = "../intra-jwt" }
once_cell = "1.11.0"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
x509-parser = "0.13.2"
