[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
actix-tls = { version = "3.0.3", features = ["rustls"] }
actix-web = { version = "4.0.1", features = ["rustls", "secure-cookies"] }
awc = { version = "3.0.0", features = ["rustls"] }
env_utils = { path = "../env_utils" }
futures-util = "0.3.21"
intra-jwt = { path = "../intra-jwt" }
once_cell = "1.12.0"
reqwest = { version = "0.11.10", default-features = false, features = ["json"] }
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
url = "2.2.2"
x509-parser = "0.13.2"
