[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
router-entity = { path = "entity" }
router-migration = { path = "migration" } # depends on your needs
actix-web = "4.0.1"
env_utils = { path = "../env_utils" }
intra-jwt = { path = "../intra-jwt" }
sea-orm = { version = "0.8.0", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "debug-print",
] }
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
tracing-subscriber = "0.3.11"
anyhow = "1.0.57"
once_cell = "1.12.0"
tracing = "0.1.34"
chrono = "0.4.19"
awc = "3.0.0"
reqwest = { version = "0.11.10", default-features = false, features = [
    "json",
    "brotli",
    "gzip",
] }
idgenerator = "2.0.0"
base64 = "0.13.0"
hmac = "0.12.1"
sha2 = "0.10.2"
regex = "1.5.6"

[features]
