[package]
name = "certissuer-cgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgi = "0.6.0"
serde = { version = "1.0.137", features = ["derive"] }
certman = { path = "../../certman" }
http = "0.2.7"
querystring = "1.1.0"
serde_json = "1.0.81"
serde_qs = "0.9.2"
lettre = "0.10.0-rc.6"
paseto = "2.0.2"
chrono = "0.4.19"
