[package]
name = "gaia-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.57"
certman = { path = "../../certman" }
chrono = "0.4.19"
entity = { path = "entity" }
idgenerator = "2.0.0"
intra-jwt = { path = "../../intra-jwt" }
lettre = "0.9.6"
lettre_email = "0.9.4"
migration = { path = "migration" }
once_cell = "1.12.0"
paseto = { version = "2.0.2", default-features = false, features = ["v2", "easy_tokens_chrono"] }
regex = "1.5.6"
sea-orm = { version = "0.8.0", default-features = false, features = [
    "macros",
    "debug-print",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[features]
