[package]
name = "router-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
sea-orm = { version = "0.8.0", features = ["macros"] }
serde = { version = "1.0.137", features = ["derive"] }
